--- a/_pages/travel.html
+++ b/_pages/travel.html
@@ -11,14 +11,10 @@ title-trigger: true
 
 {% for posts in site.posts %}
 {% if page.archive-category == posts.category %}
-  {% capture year %}{{ posts.date | date: '%Y' }}{% endcapture %}
-  {% capture month %}{{ posts.date | date: '%B' }}{% endcapture %}
-  {% capture day %}{{ posts.date | date: '%e' }}{% endcapture %}
-  {% if day != written_day %}
-    <h2 id="{{ day | slugify }}" class="archive__subtitle">{{ day }} {{month}}, {{ year }}</h2>
-    {% capture written_day %}{{ day }}{% endcapture %}
-    {% endif %}
 <!--Includes post picture, title, and exerpt-->
    {% include archive-single-posts.html %}
+<!--Includes post date. TODO: Add time to read-->
+
+
 {% endif %}
 {% endfor %}
