fixed publications link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ author_profile: false
                         <div class="collapse menu" id="menu">
                             <ul class="list-inline navbar-right" >
                             <!--    <li><a href="#">Blog</a></li> -->
-                                <li><a href="{{ site.url }}{{ site.baseurl }}/Publications">Publications</a></li>
+                                <li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
                             </ul>
                         </div>
                     </div>
