added blog feature w/ categories & tags

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ author_profile: false
                         </a>
                         <div class="collapse menu" id="menu">
                             <ul class="list-inline navbar-right" >
-                            <!--    <li><a href="#">Blog</a></li> -->
+                                <li><a href="{{ site.url }}{{ site.baseurl }}/blog">Blog</a></li>
                                 <li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
                             </ul>
                         </div>
@@ -91,7 +91,7 @@ author_profile: false
                             </li> 
                             <li>
                                 <a href="/twitter/">
-                                    <i class="zmdi zmdi-twitter-box zmdi-hc-2x icon-padding mdc-    text-grey-600 hvr-grow"></i> 
+                                    <i class="zmdi zmdi-twitter-box zmdi-hc-2x icon-padding mdc-text-grey-600 hvr-grow"></i> 
                                 </a>
                             </li>
                             <li>
