--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@ author_profile: false
             <!--Interests horizontal list, large screen -->
                                 <ul class="list-inline list-group list-unstyled hidden-xs">
                                     <li><a href="https://www.strava.com/athletes/15213270"><i class="em em-bicyclist"></i></a> Cycling </li>
-                                    <li><i class="em em-camera"></i> Photography </li>
-                                    <li><i class="em em-izakaya_lantern"></i> LED Light Art</li>
-                                    <li><a href="http://baarbe.ca/travel/"><i class="em em-airplane"></i></a> Travel </li>
+                                    <li><i class="em em-camera"></i> Photography and travel</li>
+                                    <li><i class="em em-bulb"></i> Innovation and making</li>
+                                    <li><i class="em em-robot_face"></i> Machine learning and data</li>
                                     <li><i class="em em-coffee"></i>&nbsp;Espresso</li>
                                 </ul>
             <!--Interests list, small screen -->
                                 <ul class="list-group list-unstyled hidden-sm hidden-md hidden-lg">
                                      <li><a href="https://www.strava.com/athletes/15213270"><i class="em em-bicyclist"></i></a> Cycling </li>
-                                    <li><i class="em em-camera"></i> Photography </li>
-                                    <li><i class="em em-izakaya_lantern"></i> LED Light Art</li>
-                                    <li><a href="http://baarbe.ca/travel/"><i class="em em-airplane"></i></a> Travel </li>
+                                    <li><i class="em em-camera"></i> Photography and travel</li>
+                                    <li><i class="em em-bulb"></i> Innovation and making</li>
+                                    <li><i class="em em-robot_face"></i> Machine learning and data</li>
                                     <li><i class="em em-coffee"></i>&nbsp;Espresso</li>
                                 </ul>
                             </div>
