--- a/index.html
+++ b/index.html
@@ -64,20 +64,23 @@ author_profile: false
                             <p>My skills include legal research, project management, team facilitation, business and statistical analysis, data visualization, web development, graphic design, and tutoring.</p>
                         </div>
                         <div class="home-emoji">
-            <!--Interests horizontal list, large screen -->
+<!--
+            Interests horizontal list, large screen 
                                 <ul class="list-inline list-group list-unstyled hidden-xs">
                                     <li><a href="https://www.strava.com/athletes/15213270"><i class="em em-bicyclist"></i></a> Cycling </li>
-                                    <li><i class="em em-camera"></i> Photography and travel</li>
+                                    <li><i class="em em-camera"></i> Travel photography</li>
                                     <li><i class="em em-bulb"></i> Innovation and making</li>
-                                    <li><i class="em em-robot_face"></i> Machine learning and data</li>
+                                    <li><i class="em em-robot_face"></i> AI and data</li>
                                     <li><i class="em em-coffee"></i>&nbsp;Espresso</li>
                                 </ul>
+-->
             <!--Interests list, small screen -->
-                                <ul class="list-group list-unstyled hidden-sm hidden-md hidden-lg">
-                                     <li><a href="https://www.strava.com/athletes/15213270"><i class="em em-bicyclist"></i></a> Cycling </li>
-                                    <li><i class="em em-camera"></i> Photography and travel</li>
-                                    <li><i class="em em-bulb"></i> Innovation and making</li>
-                                    <li><i class="em em-robot_face"></i> Machine learning and data</li>
+<!--                                <ul class="list-group list-unstyled hidden-sm hidden-md hidden-lg">-->
+                             <ul class="list-group list-unstyled">
+                                     <li><a href="https://www.strava.com/athletes/15213270"><i class="em em-bicyclist"></i></a> &nbsp;Cycling </li>
+                                    <li><i class="em em-camera"></i>  &nbsp;Photography and travel</li>
+                                    <li><i class="em em-bulb"></i>  &nbsp;Innovation and making</li>
+                                    <li><i class="em em-robot_face"></i>  &nbsp;Machine learning and data</li>
                                     <li><i class="em em-coffee"></i>&nbsp;Espresso</li>
                                 </ul>
                             </div>
