--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ author_profile: false
                             <h1 class="title">Jeremiah Baarbe</h1>  
                             <h1 class="small"><small>B.A. (Hons), M.A., JD Candidate, 2018&nbsp |&nbsp&nbspSearching for Articles</small> </h1>
 
-                            <p>I am a University of Ottawa Common Law student interested in technology law. I have six years experience building tech to answer questions involving the law and innovation.</p>
+                            <p>I am a University of Ottawa Common Law student interested in tech law and international law. I have six years experience building tech to answer questions involving the law and innovation.</p>
 
                             <p>I work closely with <a href="http://jeremydebeer.ca">Professor Jeremy de Beer</a> and the <a href="http://openair.org.za">Open African Innovation Research Network</a>. Recent projects include proposing a model license for an <a href="http://www.openair.org.za/publications/a-data-commons-for-food-security/">open data commons</a> at <a href="https://www.iasc2017.org/">IASC 2017</a>, co-authoring a paper on the <a href="http://www.openair.org.za/publications/the-intellectual-property-treaty-landscape-in-africa-1885-to-2015/">130-year history of IP Treaties in Africa</a>, and conducting field research on Kenya's emerging tecnology sector. In 2016, I helped prepare interventions before the Supreme Court on <a href="https://scc-csc.lexum.com/scc-csc/scc-csc/en/item/16700/index.do">forum selection clauses in online contracts</a>, and on the <a href="http://www.scc-csc.ca/case-dossier/info/sum-som-eng.aspx?cas=36654">utility standard in patent law</a>. <a href="/publications/">See my publications.</a></p>
 
@@ -55,7 +55,7 @@ author_profile: false
                         <div class="home-text-small hidden-md hidden-lg">
                             <h1 class="title">Jeremiah Baarbe</h1>  
                             <h1 class="small"><small>B.A. (Hons), M.A., JD Candidate, 2018&nbsp |&nbsp&nbspSearching for Articles</small> </h1>
-                            <p>I am a University of Ottawa Common Law student interested in technology law. I have six years experience building tech to answer questions involving the law and innovation.</p>
+                            <p>I am a University of Ottawa Common Law student interested in tech law and international law. I have six years experience building tech to answer questions involving the law and innovation.</p>
 
                             <p>I work closely with <a href="http://jeremydebeer.ca">Professor Jeremy de Beer</a> and the <a href="http://openair.org.za">Open African Innovation Research Network</a>. Recent projects include co-authoring a paper on the <a href="http://www.openair.org.za/publications/the-intellectual-property-treaty-landscape-in-africa-1885-to-2015/">130-year history of IP Treaties in Africa</a>, proposing a model license for an <a href="http://www.openair.org.za/publications/a-data-commons-for-food-security/">open data commons</a> at <a href="https://www.iasc2017.org/">IASC 2017</a>, and conducting field research on Kenya's emerging tecnology sector. In 2016, I helped Professor de Beer intervene <a href="http://www.scc-csc.ca/case-dossier/info/sum-som-eng.aspx?cas=36654">before the Supreme Court</a> on the utility standard in patent law. <a href="/publications/">See my publications.</a></p>
 
@@ -113,6 +113,7 @@ author_profile: false
                             <li><i class="em em-camera"></i>  &nbsp;Photography and travel</li>
                             <li><i class="em em-bulb"></i>  &nbsp;Innovation and making</li>
                             <li><i class="em em-robot_face"></i>  &nbsp;Machine learning and data</li>
+                            <li><i class="em em-radio"></i> &nbsp;Amateur radio: VA3BHQ</li>
                             <li><i class="em em-coffee"></i>&nbsp;Espresso</li>
                         </ul>
                     </div>
