Minor style changes

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ author_profile: false
 -->
             <!--Interests list, small screen -->
 <!--                                <ul class="list-group list-unstyled hidden-sm hidden-md hidden-lg">-->
-                     <ul class="list-group list-unstyled">
+                     <ul class="list-group-edit list-unstyled">
                              <li><a href="https://www.strava.com/athletes/15213270"><i class="em em-bicyclist"></i></a> &nbsp;Cycling </li>
                             <li><i class="em em-camera"></i>  &nbsp;Photography and travel</li>
                             <li><i class="em em-bulb"></i>  &nbsp;Innovation and making</li>
