Added Data Commons paper

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -25,7 +25,15 @@ is_page: true
 
     <h3 class="pub-heading">Working papers</h3>
         <div class="row pub-item">
-             <div class="col-md-3">
+           <div class="col-md-3">
+                 <a href="http://www.openair.org.za/publications/a-data-commons-for-food-security/">
+                    <img src="/assets/img/Open-AIR-logo-on-White-Stacked.png" class="img-responsive pub-logo" height="125px" width="125px" >
+                 </a>
+            </div>
+            <div class="col-md-8 pub-citation">
+                <p class="citation"><b>Jeremiah Baarbe,</b> Meghan Blom, &amp; Jeremy de Beer, “A Data Commons for Food Security” (2017) Open AIR Working Paper No 7, <a href="http://www.openair.org.za/publications/a-data-commons-for-food-security/">online.</a></p>
+            </div>
+            <div class="col-md-3">
                  <a href="http://www.openair.org.za/publications/the-intellectual-property-treaty-landscape-in-africa-1885-to-2015">
                     <img src="/assets/img/Open-AIR-logo-on-White-Stacked.png" class="img-responsive pub-logo" height="125px" width="125px" >
                  </a>
