Add other projects category

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -26,14 +26,6 @@ is_page: true
     <h3 class="pub-heading">Working papers</h3>
         <div class="row pub-item">
            <div class="col-md-3">
-                 <a href="http://www.openair.org.za/publications/a-data-commons-for-food-security/">
-                    <img src="/assets/img/Open-AIR-logo-on-White-Stacked.png" class="img-responsive pub-logo" height="125px" width="125px" >
-                 </a>
-            </div>
-            <div class="col-md-8 pub-citation">
-                <p class="citation"><b>Jeremiah Baarbe,</b> Meghan Blom, &amp; Jeremy de Beer, “A Data Commons for Food Security” (2017) Open AIR Working Paper No 7, <a href="http://www.openair.org.za/publications/a-data-commons-for-food-security/">online.</a></p>
-            </div>
-            <div class="col-md-3">
                  <a href="http://www.openair.org.za/publications/the-intellectual-property-treaty-landscape-in-africa-1885-to-2015">
                     <img src="/assets/img/Open-AIR-logo-on-White-Stacked.png" class="img-responsive pub-logo" height="125px" width="125px" >
                  </a>
@@ -65,6 +57,18 @@ is_page: true
                 <p class="citation">Isabel Pedersen &amp; <b>Jeremiah Baarbe</b>, (speaker) “Archiving the ‘Fabric of Digital Life’” (Paper delivered at the IEEE International Symposium on Mixed and Augmented Reality, Adelaide, AUS, 3 October 2013) <a href="http://ieeexplore.ieee.org/document/6671260/?reload=true">online.</a></p>
             </div>
         </div>
+        
+    <h3 class="pub-heading">Other Projects</h3>
+        <div class="row pub-item">
+               <div class="col-md-3">
+                   <a href="https://fabricofdigitallife.com/index.php">
+                        <img src="/assets/img/decimal_400x400.png" class="img-responsive pub-logo" position="centered" height="125px" width="125px">
+                   </a>
+               </div>
+            <div class="col-md-8 pub-citation">
+                <p class="citation">Fabric of Digital Life research archive<a href="https://fabricofdigitallife.com/index.php">online.</a></p>
+            </div>
+        </div>    
 
     </div>
     <!--MOBILE LAYOUT-->
@@ -117,5 +121,17 @@ is_page: true
             </div>
         </div>
 
+    <h3 class="pub-heading">Other Projects</h3>
+        <div class="row pub-item">
+               <div class="col-md-3">
+                   <a href="https://fabricofdigitallife.com/index.php">
+                        <img src="/assets/img/decimal_400x400.png" class="img-responsive pub-logo" position="centered" height="125px" width="125px">
+                   </a>
+               </div>
+            <div class="col-md-8 pub-citation">
+                <p class="citation">Fabric of Digital Life research archive<a href="https://fabricofdigitallife.com/index.php">online.</a></p>
+            </div>
+        </div> 
+        
     </div>
 </div>
