--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -117,7 +117,7 @@ is_page: true
                    </a>
             </div>
             <div class="col-md-8 pub-citation">
-                <p class="citation">Isabel Pedersen &amp; <b>Jeremiah Baarbe</b>, (speaker) “Archiving the ‘Fabric of Digital Life’” (Paper delivered at the IEEE International Symposium on Mixed and Augmented Reality, Adelaide, AUS, 3 October 2013) <a href="http://ieeexplore.ieee.org/document/6671260/?reload=true">online.</a></p>
+                <p class="citation">Isabel Pedersen &amp; <b>Jeremiah Baarbe</b>, (speaker) “Archiving the ‘Fabric of Digital Life’” (Paper delivered at the IEEE International Symposium on Mixed and Augmented Reality, Adelaide, AUS, 3 October 2013), <a href="http://ieeexplore.ieee.org/document/6671260/?reload=true">online.</a></p>
             </div>
         </div>
 
@@ -129,7 +129,7 @@ is_page: true
                    </a>
                </div>
             <div class="col-md-8 pub-citation">
-                <p class="citation">Fabric of Digital Life research archive <a href="https://fabricofdigitallife.com/index.php">online.</a></p>
+                <p class="citation">Fabric of Digital Life research archive, <a href="https://fabricofdigitallife.com/index.php">online.</a></p>
             </div>
         </div> 
         
